update control makers

--- a/notebooks/popsim_control_maker.ipynb
+++ b/notebooks/popsim_control_maker.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### generate control totals needed by populationsim(RSG)\n",
+    "### could use synthpop downloader to get controls directly from Census (method 1)\n",
+    "### or use existing marginal control tables generated from synthpop"
+   ]
+  },
+  {
+   "cell_type": "code",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,15 +25,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Census marginal method 1: download census marginals directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "census_key = os.environ[\"CENSUS\"]\n",
     "state_name = \"MI\"\n",
     "county_name = \"Oakland County\"\n",
     "starter = Starter(census_key, state_name, county_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "indexes = starter.get_available_geography_ids()\n",
+    "#geog_ids = []\n",
+    "dict_marg = {'h':[], 'p':[]}\n",
+    "\n",
+    "for i, geog_id in enumerate(indexes):\n",
+    "    #geog_ids.append(geog_id)\n",
+    "    dict_marg['h'].append(starter.get_household_marginal_for_geography(geog_id))\n",
+    "    dict_marg['p'].append(starter.get_person_marginal_for_geography(geog_id))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_m = {}\n",
+    "for m in ['h', 'p']:\n",
+    "    df_m = pd.concat(dict_marg[m], axis=1)\n",
+    "    dict_m[m] = df_m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Census marginal method 2: read from existing synthpop marginal files, result should be the same as download from census"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# dict_m = {}\n",
+    "# for m in ['h', 'p']:\n",
+    "#     df_m = pd.read_csv('synthpop/oak_' + m + '_margs.csv', header = [0,1,2,3], skiprows = [4], index_col = [0,1])\n",
+    "#     dict_m[m] = df_m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "## format conversion to popsim"
    ]
   },
   {
@@ -34,6 +108,7 @@
    "outputs": [],
    "source": [
     "# make lookup series for HH and Person marginals\n",
+    "# this variable list is based on SEMCOG starter 6 from synthpop\n",
     "ps_m = {}\n",
     "ps_m['h'] = pd.Series({('hh_age_of_head', 'ge25-lt45'):'HHAGE2',\n",
     " ('hh_age_of_head', 'ge45-lt65'):'HHAGE3',\n",
@@ -78,31 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "indexes = starter.get_available_geography_ids()\n",
-    "#geog_ids = []\n",
-    "dict_marg = {'h':[], 'p':[]}\n",
     "\n",
-    "for i, geog_id in enumerate(indexes):\n",
-    "    #geog_ids.append(geog_id)\n",
-    "    dict_marg['h'].append(starter.get_household_marginal_for_geography(geog_id))\n",
-    "    dict_marg['p'].append(starter.get_person_marginal_for_geography(geog_id))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "dict_total = {'h':\"HHBASE\", 'p':\"POPBASE\"}\n",
-    "dict_m = {}\n",
     "\n",
     "for m in ['h', 'p']:\n",
-    "    df_m = pd.concat(dict_marg[m], axis=1)\n",
+    "    df_m = dict_m[m]\n",
+    "    #df_m = pd.concat(dict_marg[m], axis=1)\n",
     "    ps_t = df_m.sum(level=0).mean().round(0)\n",
     "    df_m['controls'] = ps_m[m].values\n",
     "    df_m = df_m.reset_index(drop=True).set_index('controls').T\n",
@@ -113,24 +173,36 @@
    ]
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## produce popsim controls at various geographic levels"
+   ]
+  },
+  {
+   "cell_type": "code",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_blkgrp = pd.concat(dict_m.values(), axis = 1)\n",
     "df_blkgrp['BLKGRP'] = [ ''.join(x) for x in df_blkgrp.index.to_numpy()] # get unique BLKGRP \n",
     "df_blkgrp.to_csv('control_totals_' + county_name + '_blkgrp.csv')\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'control_totals_' + county_name + '_blkgrp.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_blkgrp['TRACT'] = df_blkgrp['BLKGRP'].str[:-1]\n",
@@ -141,7 +213,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +221,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,14 +230,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
