--- a/notebooks/popsim_control_maker.ipynb
+++ b/notebooks/popsim_control_maker.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +10,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +23,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "state, county = 'MI', 'Oakland County'\n",
+    "state, counties = 'MI', ['Oakland County', 'Washtenaw County']\n",
     "\n",
     "c=Census(os.environ[\"CENSUS\"], year=2017)\n",
     "# c=Census('b01f26cd56a7f5457534e8436a1e63f4c7189b23', year=2017) # explicit\n",
@@ -40,7 +37,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +53,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +72,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +103,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +115,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,27 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# look up state and county fips\n",
     "fips_table = pd.read_csv(fips_url, header=None, \n",
     "                                names=['state','state.fips', 'county.fips', 'county' ,'type'])\n",
-    "geofips = fips_table.loc[(fips_table.state == state ) & (fips_table.county == county)]\n"
+    "geofips = fips_table.loc[(fips_table.state == state ) & (fips_table.county.isin(counties))]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "26 125\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# download marginal variables by geo fips\n",
     "for ind, r in geofips.iterrows():\n",
@@ -175,15 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "B01001_001E\n \"B25007_003E + B25007_013E\"\nB25007_004E + B25007_005E + B25007_014E + B25007_015E\nB25007_006E + B25007_007E + B25007_008E + B25007_016E + B25007_017E + B25007_018E \nB25007_009E + B25007_010E + B25007_011E + B25007_019E + B25007_020E + B25007_021E\nB25006_002E\nB25006_003E\nB25006_005E\nB25006_004E + B25006_006E + B25006_007E + B25006_008E\nB11005_001E - B25003I_001E\nB25003I_001E\nB11005_002E\nB11005_011E\n \"B19001_002E + B19001_003E + B19001_004E + B19001_005E + B19001_006E\"\n \"B19001_007E + B19001_008E + B19001_009E + B19001_010E + B19001_011E\"\nB19001_012E + B19001_013E\nB19001_014E + B19001_015E + B19001_016E + B19001_017E\nB25009_003E + B25009_011E\nB25009_004E + B25009_012E\nB25009_005E + B25009_013E\nB25009_006E + B25009_014E\nB25009_007E + B25009_015E\nB25009_008E + B25009_016E\nB25009_009E + B25009_017E\n(B01001_003E  + B01001_027E + B01001_004E + B01001_005E + B01001_006E + B01001_028E + B01001_029E + B01001_030E)* B11002_001E*1.0/B01001_001E\n \"(B01001_007E + B01001_008E + B01001_009E + B01001_010E + B01001_011E + B01001_012E + B01001_013E + B01001_014E + B01001_015E + B01001_035E + B01001_036E + B01001_037E + B01001_038E + B01001_039E + B01001_016E + B01001_017E + B01001_018E + B01001_019E + B01001_040E + B01001_041E + B01001_042E + B01001_043E + B01001_031E + B01001_032E + B01001_033E + B01001_034E)* B11002_001E*1.0/B01001_001E\"\n(B01001_020E + B01001_021E + B01001_022E + B01001_023E + B01001_024E + B01001_025E + B01001_044E + B01001_045E + B01001_046E + B01001_047E + B01001_048E + B01001_049E) * B11002_001E*1.0/B01001_001E\n(B02001_002E) * B11002_001E*1.0/B01001_001E\n(B02001_003E) * B11002_001E*1.0/B01001_001E\n(B02001_005E) * B11002_001E*1.0/B01001_001E\n(B02001_004E + B02001_006E + B02001_007E + B02001_008E) * B11002_001E*1.0/B01001_001E\n(B01001_002E) * B11002_001E*1.0/B01001_001E\n(B01001_026E) * B11002_001E*1.0/B01001_001E\nB08201_002E\nB08201_003E\nB08201_004E + B08201_005E + B08201_006E\nB08202_002E\nB08202_003E\nB08202_004E + B08202_005E\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# compile Census marginals to popsim control variables\n",
     "for geo, dfg in dfc.groupby('geography'):\n",
@@ -195,7 +172,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +187,7 @@
     "        dfm['BLKGRPID'] = ['{}{}{}{}'.format(l1.zfill(2),l2.zfill(3),l3.zfill(6), l4) for l1, l2, l3, l4 in dfm.index]\n",
     "        dfm = pd.merge(dfm.reset_index(), dfcross[['BLKGRPID','PUMA']], on = 'BLKGRPID', how = 'left') \n",
     "    \n",
-    "    dfm.to_csv('{}_control_totals_{}.csv'.format(county[:3].lower(), geo.lower()))\n",
+    "    dfm.to_csv('{}_control_totals_{}.csv'.format('_'.join([c[:3].lower() for c in counties]), geo.lower()))\n",
     "    "
    ]
   },
