--- a/notebooks/popsim_control_maker.ipynb
+++ b/notebooks/popsim_control_maker.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,142 +25,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "state, counties = 'MI', ['Oakland County', 'Washtenaw County']\n",
+    "class ACS5_downloader:\n",
     "\n",
-    "c=Census(os.environ[\"CENSUS\"], year=2017)\n",
-    "# c=Census('b01f26cd56a7f5457534e8436a1e63f4c7189b23', year=2017) # explicit\n",
-    "geo_cross_csv = \"data/sem_geo_cross_walk.csv\"\n",
-    "control_csv = \"preprocess/controls_pre.csv\"\n",
-    "fips_url = \"https://www2.census.gov/geo/docs/reference/codes/files/national_county.txt\" \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def download_tract(fields, state_fips, county_fips, tract_fips = None):\n",
-    "    \"\"\"download TRACT marginals by specified geo info. \n",
-    "        must have fields, state and county fips \n",
-    "    \"\"\"\n",
-    "    if tract_fips == None:\n",
-    "        tract_fips = '*'\n",
-    "    return c.acs5.get(fields, \n",
-    "                        geo={'for': 'tract:{}'.format(tract_fips), \n",
-    "                            'in': 'state:{} county:{}'.format(state_fips, county_fips)})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def download_blockgroup(fields, state_fips, county_fips, tract_fips = None, blockgroup_fips = None):\n",
-    "    \"\"\"download block group marginals by specified geo info. \n",
-    "        must have fields, state and county fips \n",
-    "    \"\"\"\n",
-    "    if tract_fips == None:\n",
-    "        tract_fips, blockgroup_fips = '*', '*'\n",
-    "    elif blockgroup_fips == None:\n",
-    "        blockgroup_fips = '*'\n",
+    "    def __init__(self, census_reader, states, counties = None, tract_ids = None, blockgroup_ids = None):\n",
+    "        self.state = states\n",
+    "        self.counties = counties\n",
+    "        self.tracts = tract_ids\n",
+    "        self.blockgroups = blockgroup_ids \n",
+    "        self.cread = census_reader\n",
+    "        self.fips_lookup()\n",
+    "    \n",
+    "    def fips_lookup(self):\n",
+    "        fips_table = pd.read_csv(\n",
+    "                \"https://www2.census.gov/geo/docs/reference/codes/files/national_county.txt\",\n",
+    "                header=None, names=['state','state.fips', 'county.fips', 'county' ,'type'], dtype=str)\n",
+    "        if self.counties:\n",
+    "            if (self.counties != '*'):\n",
+    "                self.counties = fips_table.loc[(fips_table.state.isin(self.state)) & \n",
+    "                            (fips_table.county.isin(self.counties))]['county.fips'].unique()\n",
+    "                self.counties = ','.join(self.counties)\n",
+    "        if self.state != '*':\n",
+    "            self.state = fips_table.loc[fips_table.state.isin(self.state\n",
+    "                                    )]['state.fips'].unique()\n",
+    "            self.state = ','.join(self.state)\n",
     "\n",
-    "    return c.acs5.get(fields,\n",
-    "                        geo={'for': 'block group:{}'.format(blockgroup_fips), \n",
-    "                        'in': 'state:{} county:{} tract:{}'.format(state_fips, county_fips,tract_fips)})\n"
+    "    def state_download(self, vars):\n",
+    "        return self.cread.acs5.get(vars, geo={'for': 'state:{}'.format(self.state)})\n",
+    "\n",
+    "    def county_download(self, vars):\n",
+    "        return self.cread.acs5.get(vars, geo={'for': 'county:{}'.format(self.counties), \n",
+    "                                        'in': 'state:{}'.format(self.state)})\n",
+    "\n",
+    "    def tract_download(self, vars):\n",
+    "        return self.cread.acs5.get(vars, geo={'for': 'tract:{}'.format(self.tracts), \n",
+    "                                    'in': 'state:{} county:{}'.format(self.state, self.counties)})\n",
+    "\n",
+    "    def blockgroup_download(self, vars):\n",
+    "        clst = self.counties.split(',')\n",
+    "        cm = []\n",
+    "        for cn in clst:\n",
+    "            cm += self.cread.acs5.get(vars, geo={'for': 'block group:{}'.format(self.blockgroups), \n",
+    "                                'in': 'state:{} county:{} tract:{}'.format(self.state,cn, self.tracts)}) \n",
+    "        return cm\n",
+    "    \n",
+    "    def download(self, variables):\n",
+    "        dfm = pd.DataFrame()\n",
+    "        if not(self.counties):\n",
+    "            downv = self.state_download(variables)\n",
+    "        elif not(self.tracts):\n",
+    "            downv = self.county_download(variables)\n",
+    "        elif not(self.blockgroups):\n",
+    "            downv = self.tract_download(variables)\n",
+    "        else:\n",
+    "            downv = self.blockgroup_download(variables)\n",
+    "        dfm = pd.DataFrame.from_dict(downv)\n",
+    "\n",
+    "        return dfm\n",
+    " "
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_marginals(dic_vars, state_fips = 26, county_fips = None):\n",
-    "    \"\"\" download block group or tract marginal summaries from Census\n",
-    "        dic_vars: dictionary with BLKGRP or TRACT as keys and variables as values\n",
-    "    \"\"\"\n",
-    "    geo_margs = {}\n",
-    "    geos = ['state', 'county', 'tract', 'block group']\n",
-    "    for k, v in dic_vars.items():\n",
-    "        if k == 'BLKGRP':\n",
-    "            download_geo = download_blockgroup\n",
-    "            geoids = geos\n",
-    "        elif k == 'TRACT':\n",
-    "            download_geo = download_tract\n",
-    "            geoids = geos[:3]\n",
-    "        \n",
-    "        dfms = []\n",
-    "        for fields in v:\n",
-    "            dfm = pd.DataFrame.from_dict(download_geo(fields, state_fips, county_fips))\n",
-    "            dfm = dfm.set_index(geoids)\n",
-    "            dfm = dfm.astype(float)\n",
-    "            dfm.fillna(0, inplace =True)\n",
-    "            dfms.append(dfm)\n",
-    "        geo_margs[k] = pd.concat(dfms, axis=1) \n",
-    " \n",
-    "    return geo_margs          \n"
+    "state, counties = ['MI'], ['Oakland County', 'Washtenaw County']\n",
+    "c = Census('add_your_key', year=2017) # explicit\n",
+    "geo_cross_csv = \"../data/sem_geo_cross_walk.csv\"\n",
+    "control_csv = \"../preprocess/controls_pre.csv\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def makechunks(lst, csize):\n",
-    "    ### split list into sized chunks, Census API default limit is 50 ###\n",
-    "    for i in range(0, len(lst), csize):\n",
-    "        yield lst[i:i + csize]\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# list Census marginal variables from controls_pre table (same as \"controls\" table with additional \"acs_variables\" field )\n",
     "# \"acs_variables\" field contains evaluation expressions, including variables from Census API and operations\n",
     "dfc = pd.read_csv(control_csv)\n",
-    "dic_vars = {}\n",
-    "for geo, dfgeo in dfc.groupby('geography'):\n",
-    "    vars= list(set(re.findall(r'B[0-9]{5}[A-Z]{0,1}_[0-9]{3}E', str(list(dfgeo.acs_variables)))))\n",
-    "    dic_vars[geo] = list(makechunks(vars, 50))\n",
-    "\n"
+    "dic_margs = {}\n",
+    "for geo, dfgeo in dfc.groupby('geography'):  \n",
+    "    full_vars= list(set(re.findall(r'B[0-9]{5}[A-Z]{0,1}_[0-9]{3}E', \n",
+    "                    str(list(dfgeo.acs_variables)))))\n",
+    "    if geo == 'BLKGRP':\n",
+    "        ac5 = ACS5_downloader(c, state, counties, \"*\", \"*\")\n",
+    "        geo_cols = ['state', 'county', 'tract', 'block group']\n",
+    "    elif geo == 'TRACT':\n",
+    "        ac5 = ACS5_downloader(c, state, counties, \"*\")\n",
+    "        geo_cols = ['state', 'county', 'tract']\n",
+    "\n",
+    "    dic_margs[geo] = ac5.download(full_vars).set_index(geo_cols)\n"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# look up state and county fips\n",
-    "fips_table = pd.read_csv(fips_url, header=None, \n",
-    "                                names=['state','state.fips', 'county.fips', 'county' ,'type'])\n",
-    "geofips = fips_table.loc[(fips_table.state == state ) & (fips_table.county.isin(counties))]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# download marginal variables by geo fips\n",
-    "for ind, r in geofips.iterrows():\n",
-    "    print(r['state.fips'], r['county.fips'])\n",
-    "    final_marg = {}\n",
-    "    for k in dic_vars.keys():\n",
-    "        final_marg[k] = pd.DataFrame()\n",
-    "    geo_margs = get_marginals(dic_vars, r['state.fips'], r['county.fips'])\n",
-    "    for k, v in geo_margs.items():\n",
-    "        final_marg[k] = pd.concat([final_marg[k], geo_margs[k]], axis=0)\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,33 +133,38 @@
     "for geo, dfg in dfc.groupby('geography'):\n",
     "    for ind, r in dfg.iterrows():\n",
     "        print(r['acs_variables'])\n",
-    "        final_marg[geo][r['control_field']] = final_marg[geo].eval(r['acs_variables'].replace('\"', ''))\n",
-    "    final_marg[geo] = final_marg[geo][list(dfg.control_field)]"
+    "        dic_margs[geo] = dic_margs[geo].astype(float).fillna(0)\n",
+    "        dic_margs[geo][r['control_field']] = dic_margs[geo].eval(r['acs_variables'].replace('\"', ''))\n",
+    "    dic_margs[geo] = dic_margs[geo][list(dfg.control_field)] #keep only control fields"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add unique geoids and PUMA \n",
-    "for geo, dfm in final_marg.items():\n",
+    "for geo, dfm in dic_margs.items():\n",
     "\n",
     "    dfcross = pd.read_csv(geo_cross_csv, dtype = str)\n",
     "    if dfm.index.nlevels == 3:\n",
-    "        dfm['TRACTID'] = ['{}{}{}'.format(l1.zfill(2),l2.zfill(3),l3.zfill(6)) for l1, l2, l3 in dfm.index]\n",
+    "        dfm['TRACTID'] = ['{}{}{}'.format(l1.zfill(2),l2.zfill(3),l3.zfill(6)) \n",
+    "                                for l1, l2, l3 in dfm.index]\n",
     "        dfm = pd.merge(dfm.reset_index(), dfcross[['TRACTID','PUMA']], on = 'TRACTID', how = 'left')\n",
     "\n",
     "    elif dfm.index.nlevels == 4:\n",
-    "        dfm['BLKGRPID'] = ['{}{}{}{}'.format(l1.zfill(2),l2.zfill(3),l3.zfill(6), l4) for l1, l2, l3, l4 in dfm.index]\n",
-    "        dfm = pd.merge(dfm.reset_index(), dfcross[['BLKGRPID','PUMA']], on = 'BLKGRPID', how = 'left') \n",
-    "    \n",
+    "        dfm['BLKGRPID'] = ['{}{}{}{}'.format(l1.zfill(2),l2.zfill(3),l3.zfill(6), l4) \n",
+    "                                for l1, l2, l3, l4 in dfm.index]\n",
+    "        dfm = pd.merge(dfm.reset_index(), dfcross[['BLKGRPID','PUMA']], on = 'BLKGRPID', how = 'left')    \n",
+    "    dfm.columns = [c.upper() for c in dfm.columns]\n",
     "    dfm.to_csv('{}_control_totals_{}.csv'.format('_'.join([c[:3].lower() for c in counties]), geo.lower()))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -215,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
